ansible/roles/media_stack/templates/qbittorrent/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /media/qbittorrent(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
